@@ -19,7 +19,7 @@ use Object::Tiny::XS qw{
 
 use vars qw{$VERSION @ISA};
 BEGIN {
-	$VERSION = '0.08';
+	$VERSION = '0.09';
 	unshift @ISA, 'ADAMK::Role::SVN';
 }
 
