@@ -35,7 +35,7 @@ use ADAMK::Mixin::Trace;
 
 use vars qw{$VERSION @ISA};
 BEGIN {
-	$VERSION = '0.08';
+	$VERSION = '0.09';
 	@ISA     = 'ADAMK::Role::SVN';
 }
 
