@@ -13,7 +13,7 @@ use Object::Tiny::XS qw{
 
 use vars qw{$VERSION};
 BEGIN {
-	$VERSION = '0.08';
+	$VERSION = '0.09';
 }
 
 
