@@ -13,7 +13,7 @@ use vars qw{$VERSION @ISA $VERBOSE @EXPORT_OK %EXPORT_TAGS};
 BEGIN {
 	require Exporter;
 
-	$VERSION     = '0.08';
+	$VERSION     = '0.09';
 	@ISA         = ( 'Exporter' );
 	$VERBOSE     = 0 unless defined $VERBOSE;
 	@EXPORT_OK   = qw{ shell chdir copy move remove which };
