@@ -8,7 +8,7 @@ use ADAMK::Shell ();
 
 use vars qw{$VERSION};
 BEGIN {
-	$VERSION = '0.08';
+	$VERSION = '0.09';
 }
 
 
