@@ -1,6 +1,7 @@
 Changes for Perl extension ADAMK-Repository
 
 0.09 Tue 14 Apr 2009
+	- Updating to Module::Install::DSL 0.83
 	- Updating Module::Changes::ADAMK dependency to 0.09
 
 0.08 Mon 13 Apr 2009
